cmake_minimum_required(VERSION 2.8)
project(pxbenchmark)
find_package(PkgConfig)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(PXCOREDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
set(EXTDIR "${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/external")
include(${PXCOREDIR}/cmake/CommOpts.cmake)
include(${PXCOREDIR}/cmake/CommDeps.cmake)
include(${PXCOREDIR}/cmake/NodeDeps.cmake)
include(${PXCOREDIR}/cmake/DukeDeps.cmake)
include(${PXCOREDIR}/cmake/SManDeps.cmake)

set(WESTEROSINC ${EXTDIR}/westeros/external/install/include)
set(WESTEROSSTUBINC ${EXTDIR}/westeros-stub)

set(BREAKPADINC ${EXTDIR}/breakpad/src)
set(RTREMOTEINC ${PXCOREDIR}/remote)

set(WINSPARKLEINC ${EXTDIR}/WinSparkle/include)

set(PX_LIBRARY_SUPPORT 1)
set(PXWAYLAND_LIBRARY_SUPPORT 0)
set(PX_LIBRARY_LINK_PXCORE 1)

option(BUILD_WITH_GL "BUILD_WITH_GL" ON)
option(BUILD_WITH_PXPATH "BUILD_WITH_PXPATH" OFF)
option(BUILD_WITH_WAYLAND "BUILD_WITH_WAYLAND" OFF)
option(BUILD_WITH_WESTEROS "BUILD_WITH_WESTEROS" OFF)
option(BUILD_WITH_CXX_11 "BUILD_WITH_CXX_11" ON)
option(BUILD_WITH_TEXTURE_USAGE_MONITORING "BUILD_WITH_TEXTURE_USAGE_MONITORING" OFF)
option(BUILD_WITH_WINDOWLESS_EGL "BUILD_WITH_WINDOWLESS_EGL" OFF)
option(BUILD_PXBENCHMARK_WAYLAND_EGL "BUILD_PXBENCHMARK_WAYLAND_EGL" OFF)
option(BUILD_PXBENCHMARK_ESSOS "BUILD_PXBENCHMARK_ESSOS" OFF)
option(BUILD_WITH_WINDOWLESS_DFB "BUILD_WITH_WINDOWLESS_DFB" OFF)
option(BUILD_WITH_SERVICE_MANAGER "BUILD_WITH_SERVICE_MANAGER" OFF)
option(BUILD_WITH_SERVICE_MANAGER_LINKED "BUILD_WITH_SERVICE_MANAGER_LINKED" OFF)
option(BUILD_PXBENCHMARK_APP "BUILD_PXBENCHMARK_APP" ON)
option(BUILD_PXBENCHMARK_SHARED_LIB "BUILD_PXBENCHMARK_SHARED_LIB" OFF)
option(BUILD_PXBENCHMARK_STATIC_LIB "BUILD_PXBENCHMARK_STATIC_LIB" OFF)
option(BUILD_PXWAYLAND_SHARED_LIB "BUILD_PXWAYLAND_SHARED_LIB" OFF)
option(BUILD_PXWAYLAND_STATIC_LIB "BUILD_PXWAYLAND_STATIC_LIB" ON)
option(BUILD_OPTIMUS_STATIC_LIB "BUILD_OPTIMUS_STATIC_LIB" OFF)
option(BUILD_PXBENCHMARK_WITH_NEXUS_SUPPORT "BUILD_PXBENCHMARK_WITH_NEXUS_SUPPORT" OFF)
option(BUILD_DEBUG_METRICS "BUILD_DEBUG_METRICS" OFF)
option(BUILD_WITH_STATIC_NODE "BUILD_WITH_STATIC_NODE" OFF)
option(BUILD_PXBENCHMARK_APP_WITH_PXBENCHMARK_LIB "BUILD_PXBENCHMARK_APP_WITH_PXBENCHMARK_LIB" OFF)
option(PXBENCHMARK_ACCESS_CONTROL_CHECK "PXBENCHMARK_ACCESS_CONTROL_CHECK" ON)
option(PXBENCHMARK_PERMISSIONS_CHECK "PXBENCHMARK_PERMISSIONS_CHECK" ON)
option(PXBENCHMARK_DIRTY_RECTANGLES "PXBENCHMARK_DIRTY_RECTANGLES" OFF)
option(SPARK_ENABLE_LRU_TEXTURE_EJECTION "SPARK_ENABLE_LRU_TEXTURE_EJECTION" ON)
option(SPARK_BACKGROUND_TEXTURE_CREATION "SPARK_BACKGROUND_TEXTURE_CREATION" OFF)

if(WIN32)
option(PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS "PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS" OFF)
elseif (APPLE)
option(PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS "PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS" ON)
else()
option(PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS "PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS" ON)
endif(WIN32)

option(PXBENCHMARK_FONT_ATLAS "PXBENCHMARK_FONT_ATLAS" ON)

if (PXBENCHMARK_FONT_ATLAS)
message("Building with Font Atlas Support")
add_definitions(-DPXBENCHMARK_FONT_ATLAS)
endif (PXBENCHMARK_FONT_ATLAS)

set(PXBENCHMARK_DEFINITIONS )
set(PXBENCHMARK_ADDITIONAL_RESOURCES )
set(PXBENCHMARK_INSTALLER 0)

if (APPLE)
message("building pxbenchmark for mac")
set(PX_PLATFORM PX_PLATFORM_MAC)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DRT_PLATFORM_LINUX)
set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/mac)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -fpermissive -g -Wall -Wno-attributes -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fpermissive -g -Wall -Wno-attributes -Wall -Wextra")
set(PXBENCHMARK_LINK_DIRECTORIES ${PXCORE_LIB_LOCATION})
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_NODE_V_6_9 -D_DARWIN_USE_64_BIT_INODE=1 -DNODE_ARCH="x64" -DNODE_WANT_INTERNALS=1 -DV8_DEPRECATION_WARNINGS= -DNODE_SHARED_MODE -DNODE_USE_V8_PLATFORM=1 -DNODE_HAVE_I18N_SUPPORT=1 -DNODE_HAVE_SMALL_ICU=1 -DHAVE_INSPECTOR=1 -DV8_INSPECTOR_USE_STL=1 -DV8_INSPECTOR_USE_OLD_STL=1 -DHAVE_OPENSSL=1 -DHAVE_DTRACE=1 -D__POSIX__ -DNODE_PLATFORM=darwin -DDUCONFIG_NO_TRANSLITERATION=1 -DUCONFIG_NO_SERVICE=1 -DUCONFIG_NO_REGULAR_EXPRESSIONS=1 -DU_ENABLE_DYLOAD=0 -DU_STATIC_IMPLEMENTATION=1 -DU_HAVE_STD_STRING=0 -DUCONFIG_NO_BREAK_ITERATION=0 -DUCONFIG_NO_LEGACY_CONVERSION=1 -DUCONFIG_NO_CONVERSION=1 -DHTTP_PARSER_STRICT=0 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64)
set(PLATFORM_SOURCES mac/pxContextUtils.mm)
set(PXBENCHMARK_LINKER_OPTIONS "-framework OpenGL -framework Cocoa -framework Foundation")
if (ENABLE_THREAD_SANITIZER)
set(PXBENCHMARK_LINKER_OPTIONS "${PXBENCHMARK_LINKER_OPTIONS} -fsanitize=thread")
endif (ENABLE_THREAD_SANITIZER)
if (ENABLE_ADDRESS_SANITIZER)
set(PXBENCHMARK_LINKER_OPTIONS "${PXBENCHMARK_LINKER_OPTIONS} -fsanitize=address")
endif (ENABLE_ADDRESS_SANITIZER)
set(PXBENCHMARK_LINK_LIBRARIES)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${NODE_LIBRARY_DIRS} ${DUKE_LIBRARY_DIRS} ${COMM_DEPS_LIBRARY_DIRS})
set(PLATFORM_LIBRARIES pxCore rtCore_s pthread ${NODE_LIBRARIES} ${DUKE_LIBRARIES} ${COMM_DEPS_LIBRARIES})
include_directories(AFTER ${NODE_INCLUDE_DIRS} ${DUKE_INCLUDE_DIRS} ${COMM_DEPS_INCLUDE_DIRS})
if (DEFINED ENV{CODE_COVERAGE})
message("enabling code coverage support")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -fno-inline")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage -fno-inline")
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_CODE_COVERAGE)
execute_process(COMMAND clang --version OUTPUT_VARIABLE LLVM_VERSION1 ERROR_VARIABLE ERROR_VARIABLE1 COMMAND grep "LLVM version" OUTPUT_VARIABLE LLVM_VERSION2 ERROR_VARIABLE LLVM_ERROR2 COMMAND awk "{print $4}" OUTPUT_FILE llvmoutput OUTPUT_VARIABLE LLVM_VERSION3 ERROR_VARIABLE LLVM_ERROR3)
execute_process(COMMAND awk "{ printf \"%s\", $0 }" llvmoutput OUTPUT_VARIABLE LLVM_VERSION)
execute_process(COMMAND rm llvmoutput)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/${LLVM_VERSION}/lib/darwin)
set(PXBENCHMARK_LINK_LIBRARIES ${PXBENCHMARK_LINK_LIBRARIES} clang_rt.profile_osx)
endif ()
#set(PX_LIBRARY_SUPPORT 0)
elseif (CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -fpermissive -g -Wall -Wno-attributes -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fpermissive -g -Wall -Wno-attributes -Wall -Wextra")
execute_process(COMMAND "hostname" OUTPUT_VARIABLE HOSTNAME)
string(STRIP ${HOSTNAME} HOSTNAME)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DRT_PLATFORM_LINUX)
add_definitions(${COMM_DEPS_DEFINITIONS})

include_directories(AFTER
${NODE_INCLUDE_DIRS}
${DUKE_INCLUDE_DIRS}
${COMM_DEPS_INCLUDE_DIRS}
)

set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES}
${NODE_LIBRARY_DIRS}
${DUKE_LIBRARY_DIRS}
${COMM_DEPS_LIBRARY_DIRS}
)
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES}
${NODE_LIBRARIES}
${DUKE_LIBRARIES}
${COMM_DEPS_LIBRARIES}
pthread rt dl m)

set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} pxCore rtCore_s)

if (HOSTNAME STREQUAL "raspberrypi")
message("building PXBENCHMARK for raspberrypi")
set(PX_PLATFORM PX_PLATFORM_GENERIC_EGL)
set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/egl)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${PXCORE_LIB_LOCATION})
set(PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/egl/pxContextUtils.cpp)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPXBENCHMARK_DISABLE_PXCONTEXT_EXT)
include_directories(AFTER /opt/vc/include /opt/vc/include/interface/vcos/pthreads
/opt/vc/include/interface/vmcs_host/linux /opt/vc/include)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} /opt/vc/lib/)
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} bcm_host)
elseif (BUILD_WITH_WINDOWLESS_EGL OR BUILD_PXBENCHMARK_WAYLAND_EGL OR BUILD_PXBENCHMARK_ESSOS)
if (BUILD_WITH_WINDOWLESS_EGL)
message("Building PXBENCHMARK for windowless EGL")
set(PX_PLATFORM PX_PLATFORM_GENERIC_EGL)
set(PXBENCHMARK_ADDITIONAL_RESOURCES ${PXBENCHMARK_ADDITIONAL_RESOURCES} ${PXCOREDIR}/src/gles/pxWindowNative.cpp
${PXCOREDIR}/src/gles/LinuxInputEventDispatcher.cpp)
elseif (BUILD_PXBENCHMARK_ESSOS)
message("Building PXBENCHMARK with essos windows")
set(PX_PLATFORM PX_PLATFORM_WAYLAND_EGL)
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} essos)
elseif (BUILD_PXBENCHMARK_WAYLAND_EGL)
message("Building PXBENCHMARK with wayland windows")
set(PX_PLATFORM PX_PLATFORM_WAYLAND_EGL)
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} ${WAYLAND_EGL_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES})
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${WAYLAND_EGL_LIBRARY_DIRS} ${WAYLAND_CLIENT_LIBRARY_DIRS})
endif(BUILD_WITH_WINDOWLESS_EGL)

set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/egl)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${PXCORE_LIB_LOCATION} ${PXCOREDIR}/remote ${CMAKE_CURRENT_SOURCE_DIR})
set(PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/egl/pxContextUtils.cpp)

if (BUILD_PXBENCHMARK_WITH_NEXUS_SUPPORT)
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} nxpl)
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} nexus nxclient)
set(PXBENCHMARK_ADDITIONAL_RESOURCES ${PXBENCHMARK_ADDITIONAL_RESOURCES} ${PXCOREDIR}/src/gles/pxEGLProviderNexus.cpp)
endif(BUILD_PXBENCHMARK_WITH_NEXUS_SUPPORT)

set(PXBENCHMARK_ADDITIONAL_APP_INCLUDES_LIST $ENV{PXBENCHMARK_ADDITIONAL_APP_INCLUDES})
separate_arguments(PXBENCHMARK_ADDITIONAL_APP_INCLUDES_LIST)
include_directories(AFTER ${PXBENCHMARK_ADDITIONAL_APP_INCLUDES_LIST})
set(PXBENCHMARK_ADDITIONAL_APP_LIBRARIES_LIST $ENV{PXBENCHMARK_ADDITIONAL_APP_LIBRARIES})
separate_arguments(PXBENCHMARK_ADDITIONAL_APP_LIBRARIES_LIST)
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} ${PXBENCHMARK_ADDITIONAL_APP_LIBRARIES_LIST})

if (BUILD_WITH_SERVICE_MANAGER_LINKED)
include_directories(AFTER                                ${SMAN_DEPS_INCLUDE_DIRS})
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${SMAN_DEPS_LIBRARY_DIRS})
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} rtRemote ${SMAN_DEPS_LIBRARIES})
endif (BUILD_WITH_SERVICE_MANAGER_LINKED)

set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPX_NO_WINDOW -DENABLE_V8_HEAP_PARAMS -DENABLE_MAX_TEXTURE_SIZE -DBSTD_CPU_ENDIAN=BSTD_ENDIAN_LITTLE)
set(PXBENCHMARK_PLATFORM_DEFINE_LIST)
if (DEFINED ENV{PXBENCHMARK_PLATFORM_DEFINES})
set(PXBENCHMARK_PLATFORM_DEFINE_LIST $ENV{PXBENCHMARK_PLATFORM_DEFINES})
separate_arguments(PXBENCHMARK_PLATFORM_DEFINE_LIST)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} ${PXBENCHMARK_PLATFORM_DEFINE_LIST})
message("Extra platform defines: " ${PXBENCHMARK_PLATFORM_DEFINE_LIST})
endif (DEFINED ENV{PXBENCHMARK_PLATFORM_DEFINES})

set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPXBENCHMARK_ENABLE_ALL_APPS_WAYLAND_CONFIG)
set(PXWAYLAND_LIBRARY_SUPPORT 1)
include_directories(AFTER ${WAYLAND_EGL_INCLUDE_DIRS})
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES})
elseif (BUILD_WITH_WINDOWLESS_DFB)
message("building PXBENCHMARK for windowless DFB")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE=1 -D__STDC_LIMIT_MACROS -O3")
set(PX_PLATFORM PX_PLATFORM_GENERIC_DFB)
set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/dfb)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${PXCORE_LIB_LOCATION})
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} directfb direct fusion)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPX_NO_WINDOW -DENABLE_DFB -DENABLE_DFB_GENERIC -DPX_PLATFORM_GENERIC_DFB -DBSTD_CPU_ENDIAN=BSTD_ENDIAN_LITTLE)
set(PXCORE_INCLUDES $ENV{PXCORE_INCLUDES})
separate_arguments(PXCORE_INCLUDES)
include_directories(BEFORE ${PXCORE_INCLUDES})
else ()
message("building PXBENCHMARK for glut")
set(PX_PLATFORM PX_PLATFORM_GLUT)
set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/glut)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${PXCORE_LIB_LOCATION})
set(PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/glut/pxContextUtils.cpp)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DHAS_LINUX_BREAKPAD)
include_directories(AFTER ${GLUTINC})
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} glut breakpad_client)
set(PX_LIBRARY_LINK_PXCORE 0)
endif (HOSTNAME STREQUAL "raspberrypi")
if (NOT USE_NODE_0_12_7)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_NODE_V_6_9 -DNODE_PLATFORM="linux" -DNODE_WANT_INTERNALS=1 -DV8_DEPRECATION_WARNINGS=1 -DNODE_SHARED_MODE -DNODE_USE_V8_PLATFORM=1 -DNODE_HAVE_I18N_SUPPORT=1 -DNODE_HAVE_SMALL_ICU=1 -DHAVE_INSPECTOR=1 -DV8_INSPECTOR_USE_STL=1 -DV8_INSPECTOR_USE_OLD_STL=1)
endif (NOT USE_NODE_0_12_7)
set(PXBENCHMARK_LINKER_OPTIONS "")
#set(PXBENCHMARK_LINK_LIBRARIES pthread)
if (DEFINED ENV{CODE_COVERAGE})
message("enabling code coverage support")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -fno-inline")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage -fno-inline")
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_CODE_COVERAGE)
set(PXBENCHMARK_LINK_LIBRARIES ${PXBENCHMARK_LINK_LIBRARIES} gcov)
endif ()
elseif (WIN32)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE} CACHE STRING "" FORCE)
add_definitions(-DWIN32 -D_LIB -DPX_PLATFORM_WIN -DRT_PLATFORM_WINDOWS)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi /DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /EHs-c-")
set(PXCORE_LIB_LOCATION ${PXCOREDIR}/build/win/Release)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXCORE_LIB_LOCATION})
set(PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/glut/pxContextUtils.cpp)
if (SUPPORT_NODE)
set(PLATFORM_SOURCES ${PLATFORM_SOURCES}
${NODEDIR}/src/async-wrap.cc ${NODEDIR}/src/backtrace_win32.cc
${NODEDIR}/src/cares_wrap.cc ${NODEDIR}/src/connection_wrap.cc ${NODEDIR}/src/connect_wrap.cc
${NODEDIR}/src/debug-agent.cc ${NODEDIR}/src/env.cc ${NODEDIR}/src/fs_event_wrap.cc ${NODEDIR}/src/handle_wrap.cc
${NODEDIR}/src/inspector_agent.cc ${NODEDIR}/src/inspector_socket.cc ${NODEDIR}/src/js_stream.cc ${NODEDIR}/src/node.cc
${NODEDIR}/src/node_buffer.cc ${NODEDIR}/src/node_config.cc ${NODEDIR}/src/node_constants.cc
${NODEDIR}/src/node_contextify.cc ${NODEDIR}/src/node_counters.cc ${NODEDIR}/src/node_crypto.cc
${NODEDIR}/src/node_crypto_bio.cc ${NODEDIR}/src/node_crypto_clienthello.cc ${NODEDIR}/src/node_dtrace.cc
${NODEDIR}/src/node_file.cc ${NODEDIR}/src/node_http_parser.cc ${NODEDIR}/src/node_i18n.cc
${NODEDIR}/src/node_javascript.cc ${NODEDIR}/src/node_os.cc ${NODEDIR}/src/node_revert.cc
${NODEDIR}/src/node_stat_watcher.cc ${NODEDIR}/src/node_util.cc ${NODEDIR}/src/node_v8.cc ${NODEDIR}/src/node_watchdog.cc
${NODEDIR}/src/node_win32_etw_provider.cc ${NODEDIR}/src/node_win32_perfctr_provider.cc ${NODEDIR}/src/node_zlib.cc
${NODEDIR}/src/pipe_wrap.cc ${NODEDIR}/src/process_wrap.cc ${NODEDIR}/src/signal_wrap.cc ${NODEDIR}/src/spawn_sync.cc
${NODEDIR}/src/stream_base.cc ${NODEDIR}/src/stream_wrap.cc ${NODEDIR}/src/string_bytes.cc ${NODEDIR}/src/string_search.cc
${NODEDIR}/src/tcp_wrap.cc ${NODEDIR}/src/timer_wrap.cc ${NODEDIR}/src/tls_wrap.cc ${NODEDIR}/src/tty_wrap.cc
${NODEDIR}/src/udp_wrap.cc ${NODEDIR}/src/util.cc ${NODEDIR}/src/uv.cc)
endif (SUPPORT_NODE)
set(PLATFORM_SOURCES ${PLATFORM_SOURCES} ${PXCOREDIR}/src/utf8.c)
set_source_files_properties(utf8.c PROPERTIES LANGUAGE CXX)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DHAS_WINDOWS_BREAKPAD)
add_definitions(-DPX_PLATFORM_WIN -DRT_PLATFORM_WINDOWS -DWIN32 -DWIN32_LEAN_AND_MEAN -DGLEW_STATIC -D_TIMESPEC_DEFINED -D_CONSOLE
-DCURL_STATICLIB -DRUNINMAIN -DENABLE_RT_NODE -DDISABLE_WAYLAND -DNODE_WANT_INTERNALS=1
-DENABLE_NODE_V_6_9 -DENABLE_V8_HEAP_PARAMS=1 -DV8_DEPRECATION_WARNINGS=1 -DNODE_SHARED_MODE -DHAVE_INSPECTOR=1
-DV8_INSPECTOR_USE_STL=1 -DV8_INSPECTOR_USE_OLD_STL=1 -DENABLE_MAX_TEXTURE_SIZE
-DHAVE_OPENSSL -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_HAS_EXCEPTIONS=0 -DBUILDING_V8_SHARED=1
-DBUILDING_UV_SHARED=1 -DNODE_ARCH="ia32" -DNODE_USE_V8_PLATFORM=1 -DNODE_HAVE_I18N_SUPPORT=1 -DNODE_HAVE_SMALL_ICU=1
-DHAVE_OPENSSL=1 -DHAVE_ETW=1 -DHAVE_PERFCTR=1 -DFD_SETSIZE=1024 -DNODE_PLATFORM="win32" -D_UNICODE=1 -DUCONFIG_NO_TRANSLITERATION=1
-DUCONFIG_NO_SERVICE=1 -DUCONFIG_NO_REGULAR_EXPRESSIONS=1 -DU_ENABLE_DYLOAD=0 -DU_STATIC_IMPLEMENTATION=1
-DU_HAVE_STD_STRING=0 -DUCONFIG_NO_BREAK_ITERATION=0 -DUCONFIG_NO_LEGACY_CONVERSION=1 -DUCONFIG_NO_CONVERSION=1
-DHTTP_PARSER_STRICT=0 -DUSE_RENDER_STATS -D_HAS_EXCEPTIONS=0)
add_definitions(${COMM_DEPS_DEFINITIONS})
include_directories(AFTER ${COMM_DEPS_INCLUDE_DIRS} ${NODE_INCLUDE_DIRS} ${DUKE_INCLUDE_DIRS})
include_directories(AFTER "${EXTDIR}/pthread-2.9" ${WINSPARKLEINC} ${EXTDIR}/breakpad-chrome_55/src/)

set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${COMM_DEPS_LIBRARY_DIRS} ${NODE_LIBRARY_DIRS} ${DUKE_LIBRARY_DIRS})

set(PLATFORM_LIBRARIES pxCore.lib)
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${COMM_DEPS_LIBRARIES} ${NODE_LIBRARIES} ${DUKE_LIBRARIES})
set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES}
pthreadVC2.lib opengl32.lib Winmm.lib
Ws2_32.lib Wldap32.lib msvcrt.lib psapi.lib
iphlpapi.lib userenv.lib rtCore_s.lib common.lib
crash_generation_client.lib exception_handler.lib)

set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${EXTDIR}/breakpad-chrome_55/src/client/windows/Release/lib)

set(PXBENCHMARK_ADDITIONAL_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/win/PXBENCHMARK.rc)
set(PX_LIBRARY_LINK_PXCORE 0)
set(PX_LIBRARY_SUPPORT 0)
set(PXBENCHMARK_LINKER_OPTIONS " /DEBUG ")
set(PXBENCHMARK_INSTALLER 1)
else ()
message(FATAL_ERROR "Cannot build PXBENCHMARK. Unknown platform")
endif (APPLE)

if (DEFINED ENV{PX_BUILD_VERSION})
set(PXBENCHMARK_VERSION $ENV{PX_BUILD_VERSION})
endif(DEFINED ENV{PX_BUILD_VERSION})

if ("${PXBENCHMARK_VERSION}" STREQUAL "")
add_definitions(-DPX_SCENE_VERSION=dev)
set(PXBENCHMARK_VERSION dev)
else ()
message("PXBENCHMARK version is: ${PXBENCHMARK_VERSION}")
add_definitions(-DPX_SCENE_VERSION=${PXBENCHMARK_VERSION})
endif("${PXBENCHMARK_VERSION}" STREQUAL "")

set(TARGETINCLUDE "")
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${EXTDIR}/breakpad/src/client/linux)

set(PXBENCHMARK_LINK_LIBRARIES ${PXBENCHMARK_LINK_LIBRARIES} ${PLATFORM_LIBRARIES})

set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -D${PX_PLATFORM} -DENABLE_RT_NODE -DRUNINMAIN -DENABLE_HTTP_CACHE)

#todo add code coverage check
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
#set(PXBENCHMARK_LINKER_OPTIONS "${PXBENCHMARK_LINKER_OPTIONS} -lgcov")

include_directories(AFTER ${NODE_INCLUDE_DIRS} ${DUKE_INCLUDE_DIRS})
include_directories(AFTER ${WESTEROSINC} ${WESTEROSSTUBINC} ${TURBO_JPEG_INCLUDE_DIRS} ${BREAKPADINC} ${RTREMOTEINC} ${PXCOREDIR}/src)
include_directories(AFTER ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(AFTER ${CMAKE_CURRENT_SOURCE_DIR}/rasterizer)

set(PXSCHENE_COMMON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxResource.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxConstants.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxRectangle.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxFont.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxText.cpp
${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxTextBox.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImageA.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9Border.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxArchive.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxAnimate.cpp)

set(PXBENCHMARK_COMMON_FILES pxbenchmark.cpp)

if (BUILD_WITH_PXPATH)
message("Building with pxPath support")
set(PXBENCHMARK_COMMON_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/rasterizer/pxPath.cpp)
endif (BUILD_WITH_PXPATH)

set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} pxBenchmark.cpp)

set(PXWAYLAND_LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxContextGL.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/egl/pxContextUtils.cpp)

if (BUILD_WITH_GL)
message("Building with GL support")
set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxContextGL.cpp)
else ()
message("Building with DirectFB support")
set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxContextDFB.cpp)
endif (BUILD_WITH_GL)

if (BUILD_WITH_WAYLAND)
message("Building with wayland support")
set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxWayland.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxWaylandContainer.cpp)
set(PXWAYLAND_LIB_FILES ${PXWAYLAND_LIB_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxWayland.cpp)
if (BUILD_RTREMOTE_LIBS)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_PX_WAYLAND_RPC)
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} rtremote_shared)
set(PXBENCHMARK_LINK_DIRECTORIES ${PXBENCHMARK_LINK_DIRECTORIES} ${RTREMOTEINC})
endif (BUILD_RTREMOTE_LIBS)
else ()
message("Not building with wayland support")
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DDISABLE_WAYLAND)
endif (BUILD_WITH_WAYLAND)

if (BUILD_WITH_WESTEROS)
message("Building with Westeros support")
set(PXBENCHMARK_LINK_LIBRARIES ${PXBENCHMARK_LINK_LIBRARIES} westeros_compositor)
else ()
message("Building with Westeros stubs")
set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/external/westeros-stub/westeros-stub.cpp)
endif (BUILD_WITH_WESTEROS)

if (BUILD_WITH_SERVICE_MANAGER)
message("Building with Service Manager support")
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPX_SERVICE_MANAGER)
set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxServiceManager.cpp)
endif (BUILD_WITH_SERVICE_MANAGER)

if (BUILD_WITH_SERVICE_MANAGER_LINKED)
message("Building with Service Manager API library support")
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DPX_SERVICE_MANAGER_LINKED)
endif (BUILD_WITH_SERVICE_MANAGER_LINKED)

if (BUILD_OPTIMUS_STATIC_LIB)
message("Building with Optimus support")
set(PXBENCHMARK_APP_LIBRARIES ${PXBENCHMARK_APP_LIBRARIES} optimus rtRemote)
add_definitions(-DENABLE_OPTIMUS_SUPPORT)
endif (BUILD_OPTIMUS_STATIC_LIB)

if (BUILD_DEBUG_METRICS)
message("Building with debug metrics")
add_definitions(-DENABLE_DEBUG_METRICS)
endif (BUILD_DEBUG_METRICS)

if (SPARK_ENABLE_LRU_TEXTURE_EJECTION)
message("Building with LRU texture ejection")
add_definitions(-DENABLE_LRU_TEXTURE_EJECTION)
endif (SPARK_ENABLE_LRU_TEXTURE_EJECTION)

if (SPARK_BACKGROUND_TEXTURE_CREATION)
message("Building with background texture creation")
add_definitions(-DENABLE_BACKGROUND_TEXTURE_CREATION)
endif (SPARK_BACKGROUND_TEXTURE_CREATION)

set(PXBENCHMARK_COMMON_FILES ${PXBENCHMARK_COMMON_FILES} ${PLATFORM_SOURCES})

set(PXBENCHMARK_APP_FILES ${PXBENCHMARK_COMMON_FILES} pxbenchmark.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxResource.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxConstants.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxRectangle.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxFont.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxText.cpp
${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxTextBox.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImageA.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9Border.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxArchive.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxAnimate.cpp)
set(PXBENCHMARK_LIB_FILES ${PXBENCHMARK_COMMON_FILES})

if (PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS)
if (!APPLE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
else ()
message("Cleanup OSX build!!")
endif ()
endif (PXBENCHMARK_COMPILE_WARNINGS_AS_ERRORS)

if (BUILD_WITH_CXX_11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else ()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
endif (BUILD_WITH_CXX_11)

execute_process(
COMMAND git rev-parse HEAD
WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
OUTPUT_VARIABLE SPARK_GIT_REVISION
OUTPUT_STRIP_TRAILING_WHITESPACE
)
message("Building Spark with git revision ${SPARK_GIT_REVISION}")

set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DSPARK_BUILD_GIT_REVISION="${SPARK_GIT_REVISION}")

if (BUILD_WITH_TEXTURE_USAGE_MONITORING)
set(PXBENCHMARK_DEFINITIONS ${PXBENCHMARK_DEFINITIONS} -DENABLE_PX_SCENE_TEXTURE_USAGE_MONITORING)
endif (BUILD_WITH_TEXTURE_USAGE_MONITORING)

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${PXBENCHMARK_LINKER_OPTIONS})
link_directories(${PXBENCHMARK_LINK_DIRECTORIES})

if (BUILD_PXBENCHMARK_APP)
message("Enabling build support for pxbenchmark app")
add_executable(pxbenchmark_app ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxResource.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxConstants.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxRectangle.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxFont.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxText.cpp
${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxTextBox.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImageA.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxImage9Border.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxArchive.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/pxAnimate.cpp pxBenchmark.cpp)
set_target_properties(pxbenchmark_app PROPERTIES OUTPUT_NAME "pxbenchmark")
target_link_libraries(pxbenchmark_app ${PXBENCHMARK_APP_LIBRARIES} ${PXBENCHMARK_LINK_LIBRARIES})
add_definitions(${PXBENCHMARK_DEFINITIONS})

if (APPLE)
add_custom_command(TARGET pxbenchmark_app COMMENT "making app bundle" POST_BUILD COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/mkapp.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endif (APPLE)

if (PX_LIBRARY_SUPPORT GREATER 0)
if (BUILD_PXBENCHMARK_SHARED_LIB OR BUILD_PXBENCHMARK_SHARED_LIB)
add_dependencies(PXBENCHMARK_app PXBENCHMARK)
endif (BUILD_PXBENCHMARK_SHARED_LIB OR BUILD_PXBENCHMARK_SHARED_LIB)
endif (PX_LIBRARY_SUPPORT GREATER 0)

if (BUILD_OPTIMUS_STATIC_LIB)
add_dependencies(PXBENCHMARK_app optimus)
endif (BUILD_OPTIMUS_STATIC_LIB)

if (PXBENCHMARK_INSTALLER GREATER 0)
if (WIN32)
message("enabling installer support")
install(TARGETS PXBENCHMARK_app RUNTIME DESTINATION . COMPONENT PXBENCHMARK)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/browser DESTINATION . COMPONENT PXBENCHMARK)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/node_modules DESTINATION . COMPONENT PXBENCHMARK)
if (SUPPORT_DUKTAPE)
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/rcvrcore/" DESTINATION rcvrcore COMPONENT PXBENCHMARK)
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/duk_modules/" DESTINATION duk_modules COMPONENT PXBENCHMARK)
file(GLOB PXBENCHMARK_INSTALL_FILES_JS "${CMAKE_CURRENT_SOURCE_DIR}/*.js")
file(GLOB PXBENCHMARK_INSTALL_FILES_JS2 "${CMAKE_CURRENT_SOURCE_DIR}/duktape/*.js")
else (SUPPORT_DUKTAPE)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/rcvrcore DESTINATION . COMPONENT PXBENCHMARK)
file(GLOB PXBENCHMARK_INSTALL_FILES_JS "${CMAKE_CURRENT_SOURCE_DIR}/*.js")
endif (SUPPORT_DUKTAPE)

file(GLOB PXBENCHMARK_INSTALL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/FreeSans.ttf"
"${CMAKE_CURRENT_SOURCE_DIR}/*.json" "${CMAKE_CURRENT_SOURCE_DIR}/*.conf"
"${CMAKE_CURRENT_SOURCE_DIR}/../external/vc.build/builds/*.dll" "${CMAKE_CURRENT_SOURCE_DIR}/Release/")
if (SUPPORT_DUKTAPE)
message("installing additional duktape files")
install(FILES ${PXBENCHMARK_INSTALL_FILES_JS2} DESTINATION . COMPONENT PXBENCHMARK)
endif (SUPPORT_DUKTAPE)
install(FILES ${PXBENCHMARK_INSTALL_FILES_JS} ${PXBENCHMARK_INSTALL_FILES} DESTINATION . COMPONENT PXBENCHMARK)
set(CPACK_PACKAGE_VERSION "${PXBENCHMARK_VERSION}")
set(CPACK_NSIS_CREATE_ICONS_EXTRA "CreateShortCut '$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\PXBENCHMARK.lnk' '$INSTDIR\\\\PXBENCHMARK.exe' ''")
set(CPACK_NSIS_DELETE_ICONS_EXTRA "Delete '$SMPROGRAMS\\\\$START_MENU\\\\PXBENCHMARK.lnk'")
set(CPACK_PACKAGE_FILE_NAME "PXBENCHMARK-setup")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "PXBENCHMARK")
set(CPACK_RESOURCE_FILE_LICENSE "${PXCOREDIR}/LICENSE.txt")
set(CPACK_PACKAGE_VENDOR "PXBENCHMARK.org")
set(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/win/Spark_installer.ico")
set(CPACK_NSIS_MUI_UNIICON "${CMAKE_CURRENT_SOURCE_DIR}/win/Spark_installer.ico")
include(CPack)
endif (WIN32)
endif (PXBENCHMARK_INSTALLER GREATER 0)
endif (BUILD_PXBENCHMARK_APP)

if (PXBENCHMARK_ACCESS_CONTROL_CHECK)
add_definitions(-DENABLE_ACCESS_CONTROL_CHECK)
endif (PXBENCHMARK_ACCESS_CONTROL_CHECK)

if (PXBENCHMARK_DIRTY_RECTANGLES)
message("Enabling dirty rectangles support")
add_definitions(-DPX_DIRTY_RECTANGLES)
endif(PXBENCHMARK_DIRTY_RECTANGLES)

if (PXBENCHMARK_PERMISSIONS_CHECK)
add_definitions(-DENABLE_PERMISSIONS_CHECK)
endif (PXBENCHMARK_PERMISSIONS_CHECK)

if (PX_LIBRARY_SUPPORT GREATER 0)
message("Enabling build support for libraries")
if (PX_LIBRARY_LINK_PXCORE GREATER 0)
if (NOT APPLE)
set(LIBRARY_LINKER_OPTIONS -Wl,--whole-archive ${PXCORE_LIB_LOCATION}/libpxCore.a -Wl,--no-whole-archive)
endif (NOT APPLE)
endif (PX_LIBRARY_LINK_PXCORE GREATER 0)

if (BUILD_PXBENCHMARK_STATIC_LIB)
message("Enabling build support for PXBENCHMARK static libraries")
add_library(PXBENCHMARK_static ${PXBENCHMARK_LIB_FILES})
if (${CMAKE_VERSION} VERSION_GREATER 2.8.11 )
add_library(PXBENCHMARK ALIAS PXBENCHMARK_static)
endif ()
set_target_properties(PXBENCHMARK_static PROPERTIES OUTPUT_NAME "PXBENCHMARK")
target_link_libraries(PXBENCHMARK_static ${LIBRARY_LINKER_OPTIONS} ${PXBENCHMARK_LINK_LIBRARIES})
add_definitions(${PXBENCHMARK_DEFINITIONS})
if (PX_LIBRARY_LINK_PXCORE GREATER 0)
add_dependencies(PXBENCHMARK_static pxCore rtCore)
endif (PX_LIBRARY_LINK_PXCORE GREATER 0)
endif (BUILD_PXBENCHMARK_STATIC_LIB)

if (BUILD_PXBENCHMARK_SHARED_LIB)
message("Enabling build support for PXBENCHMARK shared libraries")
add_library(PXBENCHMARK_shared SHARED ${PXBENCHMARK_LIB_FILES})
if (${CMAKE_VERSION} VERSION_GREATER 2.8.11 )
add_library(PXBENCHMARK ALIAS PXBENCHMARK_shared)
endif ()
if (SUPPORT_DUKTAPE)
add_dependencies (PXBENCHMARK_shared dukluv)
endif (SUPPORT_DUKTAPE)
set_target_properties(PXBENCHMARK_shared PROPERTIES OUTPUT_NAME "PXBENCHMARK")
target_link_libraries(PXBENCHMARK_shared ${LIBRARY_LINKER_OPTIONS} ${PXBENCHMARK_LINK_LIBRARIES})
add_definitions(${PXBENCHMARK_DEFINITIONS})
if (PX_LIBRARY_LINK_PXCORE GREATER 0)
add_dependencies(PXBENCHMARK_shared pxCore rtCore)
endif (PX_LIBRARY_LINK_PXCORE GREATER 0)
endif (BUILD_PXBENCHMARK_SHARED_LIB)
if (PXWAYLAND_LIBRARY_SUPPORT GREATER 0)
message("Enabling build support for pxWayland libraries")
if (BUILD_PXWAYLAND_STATIC_LIB)
message("Enabling build support for pxWayland static libraries")
add_library(pxwayland_static ${PXWAYLAND_LIB_FILES})
set_target_properties(pxwayland_static PROPERTIES OUTPUT_NAME "pxwayland_s")
target_compile_definitions(pxwayland_static PRIVATE RT_PLATFORM_LINUX PX_NO_WINDOW PX_PLATFORM_GENERIC_EGL ENABLE_PX_WAYLAND_RPC ENABLE_MAX_TEXTURE_SIZE RUNINMAIN ENABLE_HTTP_CACHE BSTD_CPU_ENDIAN=BSTD_ENDIAN_LITTLE ${PXBENCHMARK_PLATFORM_DEFINE_LIST} PXWAYLANDLIBPH)
endif (BUILD_PXWAYLAND_STATIC_LIB)

if (BUILD_PXWAYLAND_SHARED_LIB)
message("Enabling build support for pxWayland shared libraries")
add_library(pxwayland_shared SHARED ${PXWAYLAND_LIB_FILES})
set_target_properties(pxwayland_shared PROPERTIES OUTPUT_NAME "pxwayland")
target_link_libraries(pxwayland_shared ${LIBRARY_LINKER_OPTIONS} ${PXBENCHMARK_LINK_LIBRARIES})
target_compile_definitions(pxwayland_shared PRIVATE RT_PLATFORM_LINUX PX_NO_WINDOW PX_PLATFORM_GENERIC_EGL ENABLE_PX_WAYLAND_RPC ENABLE_MAX_TEXTURE_SIZE RUNINMAIN ENABLE_HTTP_CACHE BSTD_CPU_ENDIAN=BSTD_ENDIAN_LITTLE ${PXBENCHMARK_PLATFORM_DEFINE_LIST} PXWAYLANDLIBPH)
endif (BUILD_PXWAYLAND_SHARED_LIB)
endif (PXWAYLAND_LIBRARY_SUPPORT GREATER 0)
else ()
message("Disabling build support for libraries")
endif (PX_LIBRARY_SUPPORT GREATER 0)

if (BUILD_OPTIMUS_STATIC_LIB)
message("Enabling Optimus library support")
add_library(optimus_static ${CMAKE_CURRENT_SOURCE_DIR}/../../pxScene2d/src/optimus_client.cpp)
add_library(optimus ALIAS optimus_static)
set_target_properties(optimus_static PROPERTIES OUTPUT_NAME "optimus")
target_compile_definitions(optimus_static PRIVATE ${PXBENCHMARK_DEFINITIONS})
endif(BUILD_OPTIMUS_STATIC_LIB)
